Fix breadcrumb spacing

--- a/source/_patterns/05-components/breadcrumb/_breadcrumb.scss
+++ b/source/_patterns/05-components/breadcrumb/_breadcrumb.scss
@@ -22,6 +22,7 @@ $breadcrumb-text-color: gesso-color(text, on-dark) !default;
 
 .breadcrumb__list {
   @include list-inline();
+  margin-top: 0;
 }
 
 .breadcrumb__item {
